--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -1,11 +1,13 @@
 
-$light-primary:#dacbff;
-$light-secondary:#0362b6;
-$light-text: #412901;
+$light-primary:#f2f2fc;
+$light-secondary:#ec1839;
+$light-text: #302e4d;
 
 $dark-primary:#0e032c;
 $dark-secondary:#08f32f;
 $dark-text:#e6e6e6;
+
+$grey: #909090;
 
 $color-change-amount: 5;
 $background-opacity: 0.9;
