--- a/scss/helpers/_mixins.scss
+++ b/scss/helpers/_mixins.scss
@@ -33,19 +33,14 @@
 
 // ************************ media querry mixins ************************* //
 
+
 // will only apply if screen 500px or less
-@mixin mediaSm{
-    @media screen and (min-width:320px) and (max-width:500px){
+@mixin mediaXL{
+    @media screen and (min-width:1171px){
         @content;
     }
 }
 
-// will only apply if screen less than 768
-@mixin mediaMd{
-    @media screen and (max-width:768px){
-        @content;
-    }
-}
 
 // will only apply if screen between 769px and 1170px
 @mixin mediaLg{
@@ -54,9 +49,31 @@
     }
 }
 
+
+// will only apply if screen less than 768
+@mixin mediaMd{
+    @media screen and (max-width:768px){
+        @content;
+    }
+}
+
+
 // will only apply if screen 500px or less
-@mixin mediaXL{
-    @media screen and (min-width:1171px){
+@mixin mediaSm{
+    @media screen and (min-width:320px) and (max-width:500px){
+        @content;
+    }
+}
+
+
+@mixin mediaSm{
+    @media screen and (min-width:321px) and (max-width:500px){
+        @content;
+    }
+}
+
+@mixin mediaXS{
+    @media screen and (max-width:320px){
         @content;
     }
 }
