--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,10 +1,9 @@
 header{
     width: 100%;
-
     .menu-toggler{
       z-index: 150;
       position: fixed;
-      right: 35px;
+      right: 1em;
       top: 35px;
       cursor: pointer;
       @include easeOut;
@@ -27,14 +26,14 @@ header{
   .mode-toggler {
         position: relative;
         top: 35px;
-        left: 5%;
-        width: 150px;
-        height: 70px;
-        border-radius: 50px;
+        left: 1em;
+        width: 100px;
+        height: 48px;
+        border-radius: 68px;
         label {
-          width: 70px;
-          height: 70px;
-          border-radius: 100px;
+          width: 48px;
+          height: 48px;
+          border-radius: 68px;
           position: absolute;
           top: 0;
           left: 0;
@@ -42,17 +41,17 @@ header{
         }
         input {
           opacity: 0.3;
-          width: 150px;
-          height: 70px;
+          width: 100px;
+          height: 48px;
           opacity: 0;
           cursor: pointer;
         }
         .toggle-icon {
-            width: 50px;
-            height: 50px;
-            margin: 10px;
+            width: 34px;
+            height: 34px;
+            margin: 5px;
             display: inline-block;
-            border-radius: 100px;
+            border-radius: 68px;
             pointer-events: none;
             position: relative;
             transition:  #{$transition-all};
